# WorkloadTruth

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  no-internal-docs.yml  publish-npm.yml  publish-pypi.yml
.well-known/: agent.json
docs/: demo.tape
npm-shim/: README.md  package-lock.json  package.json
scripts/: check-no-internal-docs.sh
src/workloadtruth/: audit_log.py  benchmark.py  cli.py  mcp_server.py  types.py
src/workloadtruth/classifier/: __init__.py  experimental.py  rules.py
src/workloadtruth/telemetry/: __init__.py  base.py  nvml_backend.py  synthetic_backend.py
tests/: test_audit_log.py  test_benchmark.py  test_classifier.py  test_cli.py  test_synthetic_backend.py
