[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workloadtruth-cli"
version = "0.1.1"
description = "Classify a GPU workload as inference or training from telemetry alone, no application changes required."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{ name = "Rudrendu Paul" }]
keywords = [
    "gpu",
    "nvml",
    "cuda",
    "mlops",
    "finops",
    "observability",
    "ai-governance",
    "compute-monitoring",
    "agent-tools",
    "mcp",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
    "Topic :: System :: Monitoring",
]
dependencies = ["click>=8.1"]

[project.optional-dependencies]
nvml = ["nvidia-ml-py>=12.560"]
mcp = ["mcp>=1.2"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "build>=1.2",
]

[project.urls]
Homepage = "https://github.com/RudrenduPaul/WorkloadTruth"
Repository = "https://github.com/RudrenduPaul/WorkloadTruth"
Issues = "https://github.com/RudrenduPaul/WorkloadTruth/issues"
Changelog = "https://github.com/RudrenduPaul/WorkloadTruth/blob/main/CHANGELOG.md"

[project.scripts]
workloadtruth = "workloadtruth.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/workloadtruth"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
# Type-checked against 3.10 (mypy's own floor); the package itself still
# supports 3.9 at runtime (see requires-python above) since nothing here
# uses a 3.10-only runtime feature, only 3.10-only type-checking behavior.
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/workloadtruth"]
omit = [
    "*/workloadtruth/cli.py",
    "*/workloadtruth/telemetry/nvml_backend.py",
    "*/workloadtruth/mcp_server.py",
]
